feat: Add enrollment control and update task configurations
This commit introduces an enrollment control feature based on TEI attributes, allowing programs to define enrollment conditions.

Key changes:
- Added `programEnrollmentControl` to the data store configuration (`DataStroreConfig.json`) to manage program eligibility.
- Updated `TeiProgramListInteractor.java` to filter enrollable programs based on these new rules.
- Made the task evaluation in `DefaultingEvaluator.kt` more robust by handling cases where task configurations might not be found.
- Reworked and expanded the immunization task configurations in `DataStoreConfig.json`, including adding new tasks and refining existing ones.
- Set a default value for the 'priority' field in the `TaskingConfig` data class.
- Ensured the task's priority from the configuration is correctly saved when a new task is created.